Fix horizontal scroll

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,8 @@
+::ng-deep html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
